# Mlflow

./: .dockerignore  .gitattributes  Dockerfile  MlflowUsAccident.ipynb  README.md  hello.py  mlflow.db  pyproject.toml
mlruns/0/: meta.yaml
mlruns/855949271339512432/: meta.yaml
mlruns/855949271339512432/34a07a428bd94e46b50907b18f95b1bb/: meta.yaml
mlruns/855949271339512432/34a07a428bd94e46b50907b18f95b1bb/metrics/: accuracy  test_loss  train_loss
mlruns/855949271339512432/34a07a428bd94e46b50907b18f95b1bb/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/855949271339512432/5ab3a36f00254e75a2aa26b3e17e3bc2/: meta.yaml
mlruns/855949271339512432/5ab3a36f00254e75a2aa26b3e17e3bc2/metrics/: accuracy
mlruns/855949271339512432/5ab3a36f00254e75a2aa26b3e17e3bc2/tags/: mlflow.log-model.history  mlflow.runName
mlruns/855949271339512432/6c9fd1b0bb604ae586852a808612b23a/: meta.yaml
mlruns/855949271339512432/6c9fd1b0bb604ae586852a808612b23a/metrics/: accuracy  test_loss  train_loss
mlruns/855949271339512432/6c9fd1b0bb604ae586852a808612b23a/tags/: Training Info  mlflow.log-model.history  mlflow.runName
mlruns/855949271339512432/7bb8969f0578412eb4d5d1b58332f8da/: meta.yaml
mlruns/855949271339512432/7bb8969f0578412eb4d5d1b58332f8da/metrics/: accuracy
mlruns/855949271339512432/7bb8969f0578412eb4d5d1b58332f8da/tags/: mlflow.log-model.history  mlflow.runName
mlruns/855949271339512432/b8ec9c3806644b2aa90c238a0ff07fc3/: meta.yaml
mlruns/models/tracking-quickstart/: meta.yaml
mlruns/models/tracking-quickstart/version-1/: meta.yaml
(+16 files in other folders)
