[project]
name = "proyecto6-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.2",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "mlflow>=2.20.3",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]
